// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`vaults.service getProtocolSummary request with currency returns the protocol summary in requested base currency 1`] = `
Object {
  "setts": Array [
    Object {
      "balance": 48405.45345505732,
      "name": "Badger",
      "value": 418455.315,
    },
  ],
  "totalValue": 418455.315,
  "vaults": Array [
    Object {
      "balance": 48405.45345505732,
      "name": "Badger",
      "value": 418455.315,
    },
  ],
}
`;

exports[`vaults.service getProtocolSummary request with no currency returns the protocol summary in usd base currency 1`] = `
Object {
  "setts": Array [
    Object {
      "balance": 48405.45345505732,
      "name": "Badger",
      "value": 836910.63,
    },
  ],
  "totalValue": 836910.63,
  "vaults": Array [
    Object {
      "balance": 48405.45345505732,
      "name": "Badger",
      "value": 836910.63,
    },
  ],
}
`;
